--- a/auth-service.yml
+++ b/auth-service.yml
@@ -1,8 +1,8 @@
 server:
-  port: 7777
+  port: 7766
 spring:
   datasource:
-    url: jdbc:mysql://${DB_HOST:localhost}:3306/authdbone?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://${DB_HOST:localhost}:3306/custdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: root
     driverClassName: com.mysql.cj.jdbc.Driver
@@ -20,5 +20,5 @@ eureka:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 jwt:
   secret: mySecretKey
-  expireMs: 120000
-  refrEshexpireMs: 120000
+  expireMs: 12000000
+  refrEshexpireMs: 12000000
